--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
     "@hookform/resolvers": "^3.9.1",
     "@mdxeditor/editor": "^3.20.0",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -19,6 +20,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "ai": "^4.3.15",
     "bcryptjs": "^2.4.3",
     "bright": "^1.0.0",
     "class-variance-authority": "^0.7.1",
